@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2022-08-18T08:20:55Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 2 ],
+  "count_decinc" : [ -0, +2 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +1 ]
+}
