@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-18T01:53:06Z",
+  "timestamp" : "2022-08-18T08:20:55Z",
   "count_outdated" : 112,
   "uniques_outdated" : 76,
-  "count" : 117,
-  "uniques" : 80,
+  "count" : 119,
+  "uniques" : 81,
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 4, 5 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ]
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
