@@ -1,11 +1,16 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 7,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-09T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
