@@ -1,3 +1,10 @@
+2022-08-18T08:20:55Z:
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 76 112 / 80 117
+* notice: next accum: outdated-unq outdated-all / unq all: 76 112 / 81 119
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-08-18]
+
 2022-08-18T01:53:06Z:
 * notice: last 14d: unq all: 4 5
 * notice: prev accum: outdated-unq outdated-all / unq all: 75 111 / 80 117
